# lofigui

./: .gitignore  .go-licenses-allowed.txt  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GO_CONTROLLER_GUIDE.md  GO_CONTROLLER_SUMMARY.md  README.md  RESEARCH.md  ROADMAP.md  Taskfile.yml  app.go  app_test.go  app_wasm.go  bulma.go  changehistory,md  controller.go  controller_states.d2  controller_test.go  examples_test.go  favicon.go  favicon_test.go  go.mod  layouts.go  layouts_test.go  lofigui.code-workspace  lofigui.go  pyproject.toml  research.md  serve.go  task-plus.yml  wasm.go  yield.go  yield_test.go  yield_wasm.go
.claude/: settings.json
.github/workflows/: ci.yml
cmd/serve/: main.go
cmd/wasm-deploy/: main.go
docs/: 01_flow.d2  01_sw_bootstrap.d2  CHANGELOG.html  README.html  RESEARCH.html  ROADMAP.html  UI_PATTERNS.md  examples.html  examples.md  index.html  index.md  multipage.md  readme.html  recipes.html  recipes.md  research-bugs.html  research-bugs.md  research-charts.html  research-charts.md  research-layouts.html  research-layouts.md  research-philosophy.html  research-philosophy.md  research-python.html  research-python.md  research-technical.html  research-technical.md  research-wasm-external-apis.html  research-wasm-external-apis.md  research-wasm-service-workers.html  research-wasm-service-workers.md  research-wasm-tinygo.html  research-wasm-tinygo.md  research.html  roadmap.html
docs/01_hello_world/: app.js  demo-gz.html  demo-tinygo.html  demo.html  index.html  main-tinygo.wasm  sw.js  technical.html
docs/01_hello_world/wasm_demo/: index.html  sw.js
docs/01a_hello_world_explicit/: index.html  sw.js
docs/01a_hello_world_explicit/wasm_demo/: index.html
docs/01b_hello_world_explicit_gzip/: index.html
docs/01b_hello_world_explicit_gzip/wasm_demo/: demo-sw.html  index.html
docs/02_svg_graph/: demo-tinygo.html  demo.html  index.html  main-tinygo.wasm
docs/02_svg_graph/wasm_demo/: index.html
docs/03_hello_world_wasm/: demo-tinygo.html  demo.html  index.html  main-tinygo.wasm
docs/03_style_sampler/: app.js  demo.html  index.html
docs/03_style_sampler/wasm_demo/: demo.html  index.html  sw.js
docs/04_tinygo_wasm/: demo-tinygo.html  demo.html  index.html  main-tinygo.wasm  main.wasm
docs/05_demo_app/: index.html
docs/06_notes_crud/: index.html
docs/06_notes_crud/wasm_demo/: index.html  wasmhttp_sw.js
docs/07_water_tank/: demo-tinygo.html  demo.html  index.html  main-tinygo.wasm
docs/08_water_tank_multi/: demo-tinygo.html  demo.html  index.html  main-tinygo.wasm
docs/09_water_tank_htmx/: demo-sw.html  demo-tinygo.html  demo.html  index.html  main-tinygo.wasm  sw.js
docs/10_water_tank_maintenance/: app.js  demo-tinygo.html  demo.html  index.html  main-tinygo.wasm
docs/11_water_tank_storage/: demo-tinygo.html  demo.html  index.html  main-tinygo.wasm
docs/12_batch_yield/: demo-tinygo.html  demo.html  index.html  main-tinygo.wasm
examples/01_hello_world/: README.md  hello.py  index.md  pyproject.toml  readme.md
examples/01_hello_world/go/: go.mod  hello_simple.go  main.go  main_wasm.go  model.go
examples/01_hello_world/python/: hello.py  pyproject.toml
examples/01_hello_world/python/templates/: hello.html
examples/01_hello_world/templates/: app.js  hello.html  hello_go.html  index.html  sw-gz.js
examples/01a_hello_world_explicit/: index.md
examples/01a_hello_world_explicit/go/: go.mod  go.sum  main.go  main_wasm.go  routes.go
examples/01a_hello_world_explicit/templates/: demo-sw.html  index.html
examples/01b_hello_world_explicit_gzip/: index.md
examples/01b_hello_world_explicit_gzip/go/: go.mod  main.go  main_wasm.go  routes.go
examples/02_svg_graph/: README.md  graph.py  index.md  pyproject.toml  readme.md
examples/02_svg_graph/go/: charts.go  go.mod  go.sum  main.go  main_wasm.go  model.go
examples/02_svg_graph/go/templates/: index.html
examples/02_svg_graph/python/: graph.py  pyproject.toml
examples/02_svg_graph/python/templates/: hello.html
examples/02_svg_graph/templates/: app.js  hello.html  hello_go.html
examples/03_hello_world_wasm/: .github-pages-deploy.yml  .gitignore  QUICKSTART.md  README.md  SUMMARY.md  app.js  hello_model.py  index.html  index.md  pyproject.toml  readme.md  serve.py  worker.js
examples/03_hello_world_wasm/go/: go.mod  main.go
examples/03_style_sampler/: .gitignore  index.md
examples/03_style_sampler/go/: build.sh  go.mod  main.go  main_wasm.go  model.go
examples/03_style_sampler/templates/: base.html  home.html  style_fixed.html  style_fullwidth.html  style_scrolling.html  style_three_panel_controls.html  style_three_panel_nav.html
examples/04_tinygo_wasm/: .gitignore  README.md  index.md
examples/04_tinygo_wasm/go/: build.sh  go.mod  main.go
examples/05_demo_app/: README.md  demo_app.py  index.md  pyproject.toml
examples/05_demo_app/python/: pyproject.toml
examples/05_demo_app/python/templates/: about.html  base.html  home.html
examples/05_demo_app/templates/: about.html  base.html  charts.html  data.html  display.html  process.html
examples/06_notes_crud/: README.md  index.md
examples/06_notes_crud/python/: notes.py  pyproject.toml
examples/06_notes_crud/python/templates/: notes.html
examples/07_water_tank/: README.md  index.md
examples/08_water_tank_multi/: README.md  index.md
examples/09_water_tank_htmx/: README.md  index.md
examples/10_water_tank_maintenance/: README.md  index.md
examples/11_seaweedfs/: README.md  serve.py
examples/11_water_tank_storage/: README.md  index.md
examples/12_batch_yield/: index.md
go/: README.md
go/lofigui/: favicon.go  go.mod  lofigui.go
lofigui/: __init__.py  app.py  aprint.py  context.py  controller.py  favicon.py  layouts.py  markdown.py  options.py  print.py
lofigui/static/: README.md
tests/: __init__.py  test_app.py  test_context.py  test_examples.py  test_favicon.py  test_markdown.py  test_print.py
wasmassets/: wasmassets.go
wasmassets/templates/: bootstrap.html.tmpl  demo_stub.html.tmpl  sw.js.tmpl
widgets/watertank/: schematic.go
(+95 files in other folders)
