[project]
name = "lofigui"
version = "0.4.1"
description = "Lofi GUI tooling"
authors = [
    {name = "Humphrey Drummond", email = "hum3@drummond.info"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "markdown>=3.4.3",
    "jinja2>=3.1.2",
]

[project.optional-dependencies]
dev = [
    "black>=23.3.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.4.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=lofigui",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.black]
line-length = 100
target-version = ['py38']
