[project]
name = "lofigui"
version = "0.8.0"
description = "Lofi GUI tooling"
authors = [
    {name = "Humphrey Drummond", email = "hum3@drummond.info"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "markdown>=3.4.3",
    "jinja2>=3.1.2",
]

[project.optional-dependencies]
dev = [
    "black>=23.3.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.4.0",
    "flake8>=6.0.0",
]
examples = [
    "fastapi>=0.96.0",
    "uvicorn>=0.22.0",
    "pygal>=3.0.0",
    "httpx>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "examples/*",
  "go.mod",
  "go.sum",
  "lofigui.go",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=lofigui",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "asyncio: marks tests as async (deselect with '-m \"not asyncio\"')",
]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.black]
line-length = 100
target-version = ['py38']
