[project]
name = "01-hello-world"
version = "0.1.0"
description = ""
authors = [
    {name = "Humphrey Drummond", email = "hum3@drummond.info"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "uvicorn>=0.22.0",
    "fastapi>=0.96.0",
    "lofigui>=0.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
