[project]
name = "02_svg_graph"
version = "0.1.0"
description = ""
authors = [
    {name = "Humphrey Drummond", email = "hum3@drummond.info"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "uvicorn>=0.22.0",
    "fastapi>=0.96.0",
    "lofigui>=0.2.2",
    "pygal>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
