[project]
name = "03-hello-world-wasm"
version = "0.1.0"
description = "Lofigui example running Python as WASM in the browser via Pyodide"
authors = [
    {name = "Humphrey Drummond", email = "hum3@drummond.info"}
]
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    # No runtime dependencies needed - runs in browser via Pyodide
    # These are just for local testing of the Python code
]

[project.optional-dependencies]
dev = [
    # For local development and testing
    "black>=23.3.0",
    "pytest>=7.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
