[project]
name = "lofigui-demo-app"
version = "0.1.0"
description = "Lofigui demo application showcasing template inheritance and features"
authors = [
    {name = "Humphrey Drummond", email = "hum3@drummond.info"}
]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "lofigui",
    "jinja2>=3.1.2",
    "markdown>=3.5.0",
    "python-multipart>=0.0.6",
]

[tool.uv.sources]
lofigui = { path = "../../", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=. --cov-report=term-missing"
